--- a/Task2.Rmd
+++ b/Task2.Rmd
@@ -6,77 +6,123 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-install.packages("PxWebApiData")
-install.packages("tidyquant")
+knitr::opts_chunk$set(echo = FALSE)
+install.packages("PxWebApiData", repos = "https://cran.r-project.org/package=PxWebApiData")
+install.packages("tidyquant", repos = "https://cran.r-project.org/package=tidyquant")
 library(readr)
 library(PxWebApiData)
 library(tidyquant)
 library(tidyverse)
 library(tidyr)
 library(dplyr)
+library(ggplot2)
+library(knitr)
 options(encoding="UTF-8")
 ```
 
-##Importerer fil 95274 som viser kapasitetsbegrensning og priser for hotell og overnatting i fylker.
+## Importerer fil 95274 som viser kapasitetsbegrensning og priser for hotell og overnatting i fylker.
 
-```{r}
-url <- ApiData("http://data.ssb.no/api/v0/dataset/95274.json?lang=no", getDataByGET = TRUE, col_types = cols(`måned` = col_date(format = "%Y%m")))
-url
+```{r, echo=FALSE, results='hide', include = FALSE}
+fylke <- ApiData("http://data.ssb.no/api/v0/dataset/95274.json?lang=no", getDataByGET = TRUE, col_types = cols(`måned` = col_date(format = "%Y%m")))
 ```
 
 Henter ut datasettet fra county og fjerner pris per rom, endrer også måned til month pga å.
 
-```{r}
-fylke <- url[[1]]
+```{r, echo=FALSE, results='hide', include = FALSE}
+fylke <- fylke[[1]]
 fylke<-subset(fylke, value>0)
 names(fylke) <-c("region", "date", "statistikkvariabel", "value")
 fylke
-head(fylke)
 ```
 
-Separerer M ifra date slik at year og month blir separert
+Separerer M ifra date slik at year og month blir separert, setter deretter sammen slik at M forsvinner.
 ```{r}
-fylkeSep <- separate(fylke, date, c("year", "month"), sep = "M")
-fylkeU <- unite(fylkeSep, date, c("year", "month"), sep = "-")
+fylke <- separate(fylke, date, c("year", "month"), sep = "M")
+fylke <- unite(fylke, date, c("year", "month"), sep = "-")
+```
+
+Går fra long til wide
+```{r}
+fylke <- spread(fylke, statistikkvariabel, value)
 ```
 
 
 Fikser på dato
 ```{r}
-fylker <- mutate(fylkeU, date= as.Date(date, format= "%Y"))
+fylker <- mutate(fylke, date= as.Date(date, format= "%Y"))
+fylker <- mutate(fylke, date= as.Date(date, format= "%Y"))
 nytid <- seq(as.Date("1985-01-01"), as.Date("2018-07-01"), by = "months")
-repnytid <- rep(nytid, length.out = 21591)
+repnytid <- rep(nytid, length.out = 7729)
 fylker$date <- repnytid
-fylker$date <- format(as.Date(fylker$date), "%Y-%m")
-head(fylker)
+```
+
+Endrer navn på kolonner og får litt info om de første og siste observasjonene i datasettet.
+```{r}
+names(fylker) <-c("region", "date", "rom", "senger", "pris")
+head(fylker, 20)
+tail(fylker, 20)
+glimpse(fylker)
 ```
 
 
-histogram
+histogram for kapasitetsutnytting av rom 
 ```{r}
-hist(fylker$value, 
-     main="Histogram for value", 
-     xlab="value", 
+hist(fylker$rom, 
+     main="Histogram kapasitetsutnytting av rom (prosent)", 
+     xlab="kapsitetsutnytting", 
      border="blue", 
      col="green",
-     xlim=c(5,100),
+     xlim=c(10,100),
      las=0, 
-     breaks=1000)
+     breaks=50)
+
+```
+
+histogram for kapaistetsutnytting av senger
+```{r}
+hist(fylker$senger, 
+     main="Histogram kapasitetsutnytting av senger (prosent)", 
+     xlab="kapsitetsutnytting", 
+     border="white", 
+     col="black",
+     xlim=c(10, 70),
+     las=1, 
+     breaks=100)
+```
+
+Lager en ggplot for kapasitetsutnytting av rom
+```{r}
+min <- as.Date("1985-01-01")
+max <- as.Date("2018-07-01")
+ggplot2::ggplot(fylker, aes(x = date, y = rom)) +
+  geom_line(color = "red") + scale_x_date(limits = c(min, max))
+```
+
+
+ggplot for kapasitetsutnytting av seng
+```{r}
+ggplot2::ggplot(fylker, aes(x = date, y = senger)) +
+  geom_line(color = "blue") + scale_x_date(limits = c(min, max))
+```
+
+Setter opp en plot som viser pris i for region
+```{r, warning = FALSE}
+ggplot2::ggplot(fylker, aes(x = pris, y = region)) + 
+  geom_line(color = "springgreen3")
 ```
 
 
 
-##Importerer fil 95276 som viser kap.begrensning og priser for hoteller og overnatting over hele landet.
+## Importerer fil 95276 som viser kap.begrensning og priser for hoteller og overnatting over hele landet.
 "
-```{r}
+```{r, echo=FALSE, results='hide', include = FALSE}
 url1 <- ApiData("http://data.ssb.no/api/v0/dataset/95276.json?lang=no", getDataByGET = TRUE)
 ```
 
 
 Henter ut datasettet fra country og fjerner pris per rom
 
-```{r}
+```{r, echo=FALSE, results='hide', include=FALSE}
 norge <- url1[[1]]
 norge<-subset(norge, value>0)
 norge
